@@ -3,6 +3,8 @@ Routes Changelog
 
 Release 1.11 (**tip**)
 ======================
+* Added Mapper.extend function that allows one to add lists of Routes objects
+  to the mapper in one batch, optionally with a path_prefix.
 * Added Mapper.submapper function that returns a SubMapper object to enable
   easier declaration of routes that have multiple keyword argument options
   in common.
